--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -172,10 +172,11 @@
                 </div>
                 <button data-bind='attr: {id: "submitExperimenterNotesButton"+pk()}' class='btn btn-success' type='submit'>Save</button>
             </form>
+            <h4>Group data</h4>
             <table class="table table-striped table-bordered">
-                <caption>Group data</caption>
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Group</th>
                         <th>Parameter</th>
                         <th>Value</th>
@@ -184,6 +185,7 @@
                 </thead>
                 <tbody data-bind="foreach: groupDataValues">
                     <tr>
+                        <td data-bind='text: pk'></td>
                         <td data-bind="text: group"></td>
                         <td data-bind="text: parameter_label"></td>
                         <td data-bind="text: value"></td>
@@ -191,10 +193,11 @@
                     </tr>
                 </tbody>
             </table>
+            <h4>Participant Data</h4>
             <table class="table table-striped table-bordered">
-                <caption>Participant data</caption>
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Participant</th>
                         <th>Parameter</th>
                         <th>Value</th>
@@ -203,6 +206,7 @@
                 </thead>
                 <tbody data-bind="foreach: participantDataValues">
                     <tr>
+                        <td data-bind='text: pk'></td>
                         <td><span data-bind="text: participant_name"></span> (<span data-bind="text: participant_email"></span>)</td>
                         <td data-bind="text: parameter_label"></td>
                         <td data-bind="text: value"></td>
