downgrade to django 1.9.7
- redis cache is failing to pickle django models properly as of 1.9.8,
not sure if this intended or a regression. downgrading for the interim

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -27,7 +27,7 @@
         <p>
         Typical experiments involve making decisions on a computer or on paper or answering survey questions.
         Experiments take about an hour to complete and may be conducted online or at the 
-        <a href='http://csid.asu.edu/ostrom-lab/elinor-ostrom-multi-method-lab'>Elinor Ostrom Multi-Methods Laboratory</a>
+        <a href='http://cbie.asu.edu/ostrom-lab/elinor-ostrom-multi-method-lab'>Elinor Ostrom Multi-Methods Laboratory</a>
         in <a href='https://maps.asu.edu/?id=120&mrkIid=62880'>Cowden Hall, Room 124</a>. Your participation in these
         experiments is entirely voluntary.  For participating in these studies, you will typically receive $5 for
         showing up, and an additional amount which can vary between $5 to $40 depending on your decisions during the
