--- a/vcweb/core/templates/accounts/login.html
+++ b/vcweb/core/templates/accounts/login.html
@@ -24,7 +24,7 @@
             <a class='external' target='_blank' href='https://getprotected.asu.edu/services/auth'>CAS authentication</a> for ASU students
             </p>
             <div id="login_submit">
-                <a href="{% url 'cas.views.login' %}" class='submit'>Sign In</a>
+                <a href="{% url 'cas_login' %}" class='submit'>Sign In</a>
             </div>
         </div>
     </div>
