fix broken links
[skip ci]

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -58,12 +58,12 @@
         <p>
             The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
             (BCS 0625354, SES 0748632, IIS 1210856) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
-            and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for Behavior, Institutions, and the Environment</a>.
+            and is affiliated with the <a class='external' href='http://cbie.asu.edu'>Center for Behavior, Institutions, and the Environment</a>.
         </p>
         <p>
             Open source and education licenses have been generously provided by 
-            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' alt='pycharm logo' src='//www.jetbrains.com/pycharm/docs/logo_pycharm.png'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
-            <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>, and <a href='https://github.com'>GitHub</a>.
+            <a href='http://www.jetbrains.com/pycharm'>Jetbrains PyCharm</a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
+            <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>, and <a href='https://github.com/virtualcommons'>GitHub</a>.
         </p>
     </div>
 {% endblock page %}
