--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -16,7 +16,7 @@
 {% url 'subjectpool:subjectpool_index' as subjectpool %}
 <!DOCTYPE html>
 <html lang="en">
-{% with jquery_version="1.12.4" bootstrap_version="3.3.7" bootswatch_version="3.3.7" fontawesome_version="4.7.0" knockout_version="3.4.0" ravenjs_version="3.7.0" %}
+{% with jquery_version="1.12.4" bootstrap_version="3.3.7" bootswatch_version="3.3.7" fontawesome_version="4.7.0" knockout_version="3.4.0" ravenjs_version="3.7.0" path=request.path if request else '' %}
 <head>
 {% block head %}
 <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
@@ -44,21 +44,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class='navbar-brand {{ request|active:home }}' href='{{ home }}'><img class='pull-left' src='{% static "images/vcweb-logo.png" %}' width='30' height='23' alt='the virtual commons'>virtual commons </a>
+            <a class='navbar-brand {{ path|active:home }}' href='{{ home }}'><img class='pull-left' src='{% static "images/vcweb-logo.png" %}' width='30' height='23' alt='the virtual commons'>virtual commons </a>
         </div>
         <div class="collapse navbar-collapse" role='navigation'>
             <ul class='nav navbar-nav'>
                 {% if user.is_authenticated %}
                 {% if user.participant %}
-                <li class='{{ request|active_re:participate }}'><a href='{{ participate }}'><i class='fa fa-users'></i> Participate</a></li>
+                <li class='{{ path|active_re:participate }}'><a href='{{ participate }}'><i class='fa fa-users'></i> Participate</a></li>
                 {% elif user.experimenter %}
-                <li class='{{ request|active_re:dashboard }}'><a href='{{ dashboard }}'><i class='fa fa-tachometer'></i> Dashboard</a></li>
+                <li class='{{ path|active_re:dashboard }}'><a href='{{ dashboard }}'><i class='fa fa-tachometer'></i> Dashboard</a></li>
                 {% if not user.experimenter.is_demo_experimenter %}
-                <li class='{{ request|active_re:subjectpool }}'><a href='{{ subjectpool }}'><i class='fa fa-users'></i> Subject recruitment</a></li>
+                <li class='{{ path|active_re:subjectpool }}'><a href='{{ subjectpool }}'><i class='fa fa-users'></i> Subject recruitment</a></li>
                 {% endif %}
                 {% endif %}
                 {% endif %}
-                <li class='{{ request|active:contact }}'><a href='{{ contact }}'><i class='fa fa-bell-o'></i> Contact us</a></li>
+                <li class='{{ path|active:contact }}'><a href='{{ contact }}'><i class='fa fa-bell-o'></i> Contact us</a></li>
                 <li><a target='_blank' href='{{ issues_url }}'><i class='fa fa-bullhorn'></i> Report a bug</a></li>
                 {% comment %} <li><a href='#' id="report-issue" data-toggle="modal" data-target="#bugModal" ><i class='fa fa-bullhorn'></i> Report a bug</a></li> {% endcomment %}
             </ul>
@@ -66,7 +66,7 @@
             {% block login %}
             <ul class='nav navbar-nav navbar-right'>
                 {% if user.is_authenticated %}
-                <li class='{{ request|active:login %} dropdown'>
+                <li class='{{ path|active:login }} dropdown'>
                 <a class='dropdown-toggle' data-toggle='dropdown' href='#'>{{ user.email }} <i class='fa fa-chevron-down'></i></a>
                     <ul class='dropdown-menu'>
                         {% if user.is_superuser %}
@@ -77,7 +77,7 @@
                     </ul>
                 </li>
                 {% else %}
-                <li class='{{ request|active:login %}'>
+                <li class='{{ path|active:login }}'>
                     {% if DEBUG %}
                     <a href='{{ login }}'>
                     {% else %}
