more WiP on autocompletion changes

--- a/vcweb/core/subjectpool/templates/subjectpool/index.html
+++ b/vcweb/core/subjectpool/templates/subjectpool/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load static %}
 {% block title %} Experiment Session Management {% endblock %}
 {% block page %}
     <div class="row" id='page'>
@@ -102,7 +103,9 @@
 {% endblock page %}
 
 {% block javascript %}
-{{ block.super }}
+    {{ block.super }}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     {% include "includes/bootstrap-datetimepicker.html" %}
     <script type= "text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/calendar.js"></script>
