--- a/vcweb/core/templates/accounts/asu_registration.html
+++ b/vcweb/core/templates/accounts/asu_registration.html
@@ -18,7 +18,7 @@
     {% csrf_token %}
     {%  bootstrap_form form layout="horizontal" %}
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-offset-3 col-md-9">
             <button type='submit' id='submitForm' class='btn btn-primary'>Save</button>
         </div>
     </div>
@@ -26,9 +26,10 @@
 {% endblock page %}
 
 {% block javascript %}
-    {{  block.super }}
+    {{ form.media }}
     {% include "includes/jquery.validate.html" %}
-<script type='text/javascript'>
+    {{  block.super }}
+    <script type='text/javascript'>
     $(document).ready(function() {
         $("#vcweb-form :input:visible:enabled:first").focus();
         $('#vcweb-form').validate({
