--- a/vcweb/core/templates/accounts/profile.html
+++ b/vcweb/core/templates/accounts/profile.html
@@ -1,5 +1,7 @@
 {% extends "forms/base.html" %}
 
+{% load static %}
+
 {% block title %}Your Account{% endblock %}
 
 {% block form-title %}
@@ -10,7 +12,7 @@
 {% block form %}
 {% include "includes/bootstrap-form.html" %}
     <div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
+    <div class="col-md-offset-3 col-md-9">
         <button type='submit' id='submitForm' class='btn btn-primary'>Save</button>
     </div>
   </div>
@@ -18,6 +20,7 @@
 
 {% block javascript %}
     {{  block.super }}
+    {{ form.media }}
         <script type='text/javascript'>
         $(document).ready(function() {
             $("#vcweb-form :input:visible:enabled:first").focus();
@@ -72,7 +75,7 @@
                     console.debug("submitting form");
                     $.post("/accounts/profile/update", formData,
                          function(data) {
-                            if(data.success) {
+                            if (data.success) {
                                 $("#error-messages").html('<div class="alert alert-success">Your profile has been updated. Thank you for registering!</strong></div>');
                             } else {
                                 $("#error-messages").html('<div class="alert alert-danger"><strong>'+data.message+'</strong></div>');
