--- a/vcweb/core/templates/includes/jquery.validate.html
+++ b/vcweb/core/templates/includes/jquery.validate.html
@@ -1,3 +1,3 @@
-{% with jqv_version="1.13.1" %}
-<script type='text/javascript' src='//ajax.aspnetcdn.com/ajax/jquery.validate/{{jqv_version}}/jquery.validate.min.js'></script>
+{% with jqv_version="1.17.0" %}
+<script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/jquery-validate/{{jqv_version}}/jquery.validate.min.js'></script>
 {% endwith %}
