--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -132,7 +132,7 @@
             <li><a href='http://cbie.asu.edu'>Center for Behavior, Institutions, and the Environment</a></li>
             <li><a href='http://complexity.asu.edu'>Biosocial Complexity Initiative @ ASU</a></li>
             <li><a href='http://www.azregents.edu/'>&copy; 2011-{% now "Y" %} Arizona Board of Regents</a></li>
-            <li>build: {{ TAG }}</li>
+            <li><a href='https://github.com/virtualcommons/vcweb'><i class='fa fa-github-square'></i> build: {{ RELEASE_VERSION }}</a></li>
         </ul>
         <a style='margin-top: 15px;' class='visible-xs pull-right' href='{{home}}'><img class='logo' src='{% static "images/vcweb-logo.png" %}' width='30' height='23' alt='vcweb logo'/></a>
         <ul style='margin-top: 5px;' class='list-unstyled visible-xs'>
