--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -9,59 +9,58 @@
         <h2>Welcome</h2>
         <div>
             The Virtual Commons is an open software initiative hosted at
-            <a class='external' href='http://www.asu.edu'>Arizona State University</a>.
+            <a class='external' href='https://www.asu.edu'>Arizona State University</a>.
             We develop real-time dynamic experiments to analyze and better understand collective action issues. For
             example, sharing common resources has been a challenge for human societies for millennia. In many
-            circumstances, the ability to create <a href='http://en.wikipedia.org/wiki/Elinor_Ostrom#Design_principles_for_Common_Pool_Resource_.28CPR.29_institutions'>effective institutional 
-                arrangements</a> has helped to avoid the <a href='http://en.wikipedia.org/wiki/Tragedy_of_the_commons'>tragedy of the commons</a>. 
-            <a href='http://www.sciencemag.org/cgi/content/abstract/328/5978/613'>Controlled experiments</a> are 
+            circumstances, the ability to create <a href='https://en.wikipedia.org/wiki/Elinor_Ostrom#Design_principles_for_Common_Pool_Resource_(CPR)_institution'>effective institutional arrangements</a> has helped to avoid the <a href='http://en.wikipedia.org/wiki/Tragedy_of_the_commons'>tragedy of the commons</a>.
+            <a href='http://www.sciencemag.org/cgi/content/abstract/328/5978/613'>Controlled experiments</a> are
             an important instrument for increasing our understanding of how people organize themselves in cooperative
             arrangements.
         </div>
         <h2>Participate in ASU research</h2>
         <p>
-        If you are at least 18 years old and an undergraduate student currently enrolled at ASU you can 
-        <a href='https://vcweb.asu.edu/cas/login'>sign up</a> to the participant database that we use for randomly
+        If you are at least 18 years old and an undergraduate student currently enrolled at ASU you can
+        <a href='{{ cas_login_url }}'>sign up</a> to the participant database that we use for randomly
         selecting participants.
         </p>
         <p>
         Typical experiments involve making decisions on a computer or on paper or answering survey questions.
-        Experiments take about an hour to complete and may be conducted online or at the 
+        Experiments take about an hour to complete and may be conducted online or at the
         <a href='http://cbie.asu.edu/ostrom-lab/elinor-ostrom-multi-method-lab'>Elinor Ostrom Multi-Methods Laboratory</a>
         in <a href='https://maps.asu.edu/?id=120&mrkIid=62880'>Cowden Hall, Room 124</a>. Your participation in these
         experiments is entirely voluntary.  For participating in these studies, you will typically receive $5 for
         showing up, and an additional amount which can vary between $5 to $40 depending on your decisions during the
-        experiment. 
+        experiment.
         </p>
         <p>
-        You can sign up by visiting <a href='https://vcweb.asu.edu/cas/login'>https://vcweb.asu.edu/cas/login</a>, signing
+        You can sign up for experiments by logging in via <a href='{{ cas_login_url }}'>ASU's CAS authentication</a>, signing
         in with your ASURITE ID, and then filling out a brief questionnaire. When experiment sessions are available,
         randomly selected groups of individuals in our participant database will receive email invitations informing them of
         the upcoming sessions and with additional instructions on how to sign up and participate in a specific experiment
-        session. 
+        session.
         </p>
         <p>
-        If you have any other questions, please see our <a href='https://vcweb.asu.edu/ostromlab/faq'>FAQ</a> or feel free
-        to <a href='/contact'>contact us</a>. Thanks for your interest!
+        If you have any other questions, please see our <a href='{{ faq_url }}'>FAQ</a> or feel free
+        to <a href='{{ contact_url }}'>contact us</a>. Thanks for your interest!
         </p>
         <h2>Current development</h2>
         <div>
             We test our software against up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a>,
-            <a href='http://getfirefox.com'>Mozilla Firefox</a> and <a href='http://www.apple.com/safari'>Safari</a>. 
+            <a href='http://getfirefox.com'>Mozilla Firefox</a> and <a href='http://www.apple.com/safari'>Safari</a>.
             if you encounter any problems please make sure you are using a recent release of one of these browsers, and
-            feel free to <a href='/bug-report'>file a bug report</a> or <a href='/contact'>contact us</a> if you
+            feel free to <a href='{{ issues_url }}'>file a bug report</a> or <a href='{{ contact_url }}'>contact us</a> if you
             encounter any issues.
 
             Up-to-date development news and documentation can be found at our <a class='external' href='https://github.com/virtualcommons/vcweb'>GitHub repository</a>.
         </div>
         <h2>Acknowledgements</h2>
         <p>
-            The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
-            (BCS 0625354, SES 0748632, IIS 1210856) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
+            The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a>
+            (BCS 0625354, SES 0748632, IIS 1210856) and <a class='external' href='http://www.asu.edu'>Arizona State University</a>
             and is affiliated with the <a class='external' href='http://cbie.asu.edu'>Center for Behavior, Institutions, and the Environment</a>.
         </p>
         <p>
-            Open source and education licenses have been generously provided by 
+            Open source and education licenses have been generously provided by
             <a href='http://www.jetbrains.com/pycharm'>Jetbrains PyCharm</a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
             <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>, and <a href='https://github.com/virtualcommons'>GitHub</a>.
         </p>
