--- a/vcweb/core/templates/participant/dashboard.html
+++ b/vcweb/core/templates/participant/dashboard.html
@@ -10,10 +10,16 @@ Participant Dashboard
         <h3 class='panel-title'>Welcome back, {{request.user.participant}}</h3>
     </div>
     <div class='panel-body'>
-        <div data-bind='ifnot: hasUpcomingEvents'>
+        <div data-bind='if: isPortOfMars'>
+            <i class='fa fa-rocket fa-2x'></i> You've successfully signed up for the Port of Mars experiment. We will
+            periodically email random groups of participants to sign up for registered sessions for the duration of the
+            experiment. Thanks in advance for participating!
+        </div>
+        <div data-bind='if: ! isPortOfMars && ! hasUpcomingEvents'>
             <div class='alert alert-warning alert-block'>
-                You're not signed up for any experiments at the moment. We periodically invite random groups of
-                participants to participate in experiments. Please check again later or <a href='/contact'>contact us</a> if you have any questions.
+                You're not signed up for any other experiments at the moment. We periodically invite random groups of
+                participants to participate in experiments. Please check again later or 
+                <a href='/contact'>contact us</a> if you have any questions.
             </div>
         </div>
         <div data-bind='if: pendingExperiments().length > 0'>
